# bullethell

./: .clang-format  .gitmodules  CMakeLists.txt  Program.cs  README.md  build.bash  nodemon.json  package-lock.json  package.json  run
.cache/clangd/index/: basalt.h.B391FB69775FF5FB.idx  basalt_archaeo.c.9C6990056098D97A.idx  basalt_assets.c.CF05678C8FB9F623.idx  basalt_assets.cpp.DF699DA3C51A24B1.idx  basalt_config.c.DC495185DBDC8505.idx  basalt_dialog.cpp.45C868C6C67A4167.idx  basalt_dialog_utils.c.9E041045F77906AF.idx  basalt_extra.h.6DFB471D86D6E43F.idx  basalt_extra.hpp.B62B75B091AE3A68.idx  basalt_extra_graphics.c.E76E13E3266A9424.idx  basalt_graphics.c.6C08579CE9A5C724.idx  (+43 more)
.github/workflows/: compile.yml
assets/: loc_editor.csv  pat_test.xml
lua/: test.lua
lua/patterns/: pattern_test.lua
src/: CMakeLists.txt  bullet_ai.c  bullet_ai.cpp  bullet_assets.cpp  bullet_assets.hpp  bullet_collision.c  bullet_collision.cpp  bullet_common.h  bullet_common.hpp  bullet_dialog.c  bullet_dialog.cpp  bullet_dialog.hpp  bullet_editor.c  bullet_editor.cpp  bullet_editor_patterns.c  bullet_editor_patterns.cpp  bullet_entities.c  bullet_entities.cpp  bullet_entities.hpp  bullet_factories.cpp  bullet_functional.hpp  bullet_game.c  bullet_game.cpp  bullet_gui.c  bullet_gui.cpp  bullet_levels.c  bullet_levels.cpp  bullet_lua.cpp  bullet_lua.h  bullet_lua.hpp  bullet_lua_console.cpp  bullet_lua_console.h  bullet_lua_console.hpp  bullet_mltest.cpp  bullet_mltest.h  bullet_patterns.c  bullet_patterns.cpp  bullet_scenes.cpp  bullet_scenes.hpp  bullet_service.cpp  (+3 more)
